--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,9 @@
 @import "avatar";
 @import "navbar";
 @import "banner";
+
+
+#wrapper {
+  height: 100vh;
+  background-color: black;
+}
