--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,29 @@
-.navbar-lewagon {
+
+.navbar {
   justify-content: space-between;
-  background: white;
+  background: transparent !important;
+  padding-top: 0;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+// .navbar-lewagon .navbar-brand img {
+//   width: 40px;
+// }
+.navbar {
+  position: sticky !important;
+  top: 0 !important;
+}
+// .navbar-light {
+// opacity: 0 !important;
+// }
+a.nav-link  {
+  color: white !important;
+}
+.navbar {
+  box-shadow: 0 5px 6px -6px black;
+  // margin: 0 auto;
+  // overflow-x: hidden;
 }
